# TodoApp

./: GEMINI.md  README.md  pyproject.toml  tasks.json
.github/workflows/: python-ci.yml
docs/: generate-tasks_py.mdc  prd.md
docs/tasks/: 01-scaffolding.md  02-task-creation.md  03-task-modification.md  04-task-querying.md  05-cli-ux.md  06-finalization.md
tests/test_application/: test_commands.py  test_queries.py
tests/test_domain/: test_entities.py  test_value_objects.py
tests/test_infrastructure/: test_cli.py
tests/test_infrastructure/test_persistence/: test_in_memory.py  test_json_repository.py
todo_app/: main.py
todo_app/application/commands/: __init__.py  commands.py
todo_app/application/exceptions/: __init__.py
todo_app/application/queries/: __init__.py  queries.py
todo_app/domain/entities/: task.py
todo_app/domain/exceptions/: __init__.py
todo_app/domain/value_objects/: __init__.py  task_id.py
todo_app/infrastructure/cli/: main.py
todo_app/infrastructure/persistence/: __init__.py  in_memory.py  json_repository.py
